[package]
name = "integration_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
activitypub_federation.workspace = true
actix-web = "4.3.1"
anyhow.workspace = true
async-stream = "0.3.5"
async-trait = "0.1.68"
clap = { version = "4.3.8", features = ["derive"] }
diesel.workspace = true
diesel-async = { workspace = true, features = ["postgres"] }
futures.workspace = true
futures-core = "0.3.28"
indexmap = "2.0.0"
lemmy_db_schema = { workspace = true, features = ["lemmy_utils", "full"] }
lemmy_utils.workspace = true
mime = "0.3.17"
pin-project = "1.1.2"
rand = "0.8.5"
serde.workspace = true
serde_json.workspace = true
time = { version = "0.3.22", features = ["serde"] }
tokio = { workspace = true }
tokio-stream = "0.1.14"
tracing.workspace = true
tracing-subscriber = "0.3.17"
url.workspace = true
zstd = "0.12.3"
